#30 Removing default value for eloqua form

--- a/blocks/eloqua-form/forms/turbo-calculator-form.html
+++ b/blocks/eloqua-form/forms/turbo-calculator-form.html
@@ -1049,6 +1049,7 @@
                       class="elq-item-input"
                       name="emailAddress"
                       id="fe749"
+                      value="~~eloqua..type--emailfield..syntax--EmailAddress~~"
                       style="width: 100%"
                     />
                   </div>
@@ -1081,6 +1082,7 @@
                       class="elq-item-input"
                       name="firstName"
                       id="fe750"
+                      value="~~eloqua..type--emailfield..syntax--First_Name_Only1~~"
                       style="width: 100%"
                     />
                   </div>
@@ -1113,6 +1115,7 @@
                       class="elq-item-input"
                       name="lastName"
                       id="fe751"
+                      value="~~eloqua..type--emailfield..syntax--LastName~~"
                       style="width: 100%"
                     />
                   </div>
@@ -1145,6 +1148,7 @@
                       class="elq-item-input"
                       name="company"
                       id="fe752"
+                      value="~~eloqua..type--emailfield..syntax--Company~~"
                       style="width: 100%"
                     />
                   </div>
@@ -1332,6 +1336,7 @@
                       class="elq-item-input"
                       name="city"
                       id="fe756"
+                      value="~~eloqua..type--emailfield..syntax--City~~"
                       style="width: 100%"
                     />
                   </div>
@@ -1468,6 +1473,7 @@
                       class="elq-item-input"
                       name="zipPostal"
                       id="fe758"
+                      value="~~eloqua..type--emailfield..syntax--Zip_Postal~~"
                       style="width: 100%"
                     />
                   </div>
