--- a/test/blocks/footer/footer.plain.html
+++ b/test/blocks/footer/footer.plain.html
@@ -1,3 +1,48 @@
-<div><p>Copyright © 2022 Adobe. All rights reserved.</p>
-  <p><a href="https://www.adobe.com/privacy.html">Privacy</a> / <a href="https://www.adobe.com/legal/terms.html">Terms of Use</a> / <a href="https://www.adobe.com/#openPrivacy">Cookie preferences</a> / <a href="https://www.adobe.com/privacy/ca-rights.html">Do not sell my personal information</a> / <a href="https://www.adobe.com/privacy/opt-out.html#interest-based-ads">AdChoices</a></p>
+<div>
+  <div class="columns">
+    <div>
+      <div>
+        <h3 id="about-volvo"><strong>About Volvo</strong></h3>
+        <ul>
+          <li><a href="/about-volvo/our-story/">About</a></li>
+        </ul>
+      </div>
+      <div>
+        <h3 id="follow-us"><strong>Follow us</strong></h3>
+        <ul>
+          <li><a href="https://www.facebook.com/VolvoTrucksNorthAmerica">Facebook</a></li>
+          <li><a href="https://www.youtube.com/user/VolvoTrucksUSA">YouTube</a></li>
+          <li><a href="https://www.linkedin.com/company/volvo-trucks">LinkedIn</a></li>
+          <li><a href="https://www.instagram.com/volvotrucksna">Instagram</a></li>
+          <li><a href="https://twitter.com/VolvoTrucksNA">Twitter</a></li>
+        </ul>
+      </div>
+      <div>
+        <h3 id="resources"><strong>Resources</strong></h3>
+        <ul>
+          <li><a href="/parts-and-services/services/resources/">Emissions Service Information</a></li>
+          <li><a href="/parts-and-services/parts/material-safety-data-sheets/">SDS Information</a></li>
+        </ul>
+      </div>
+      <div>
+        <h3 id="facilities"><strong>Facilities</strong></h3>
+        <ul>
+          <li><a href="/about-volvo/facilities/">Our Locations</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+<div>
+  <ul>
+    <li><a href="https://www.volvogroup.com/">www.volvogroup.com</a></li>
+    <li><a href="https://www.volvotrucks.us/public-privacy-policy/">Privacy Policy</a></li>
+    <li><a href="https://www.volvotrucks.us/cookies/">Cookies</a></li>
+    <li><a href="https://www.volvotrucks.us/about-volvo/contact-us/">Contact Us</a></li>
+    <li><a href="https://www.volvobrandshop.com/">Volvo Shop</a></li>
+    <li><a href="https://www.volvogroup.com/en/tools/privacy/data-subject-rights.html">Do Not Sell or Share My Personal Information</a></li>
+  </ul>
+</div>
+<div>
+  <p>© Copyright AB Volvo {year}</p>
 </div>
