--- a/blocks/eloqua-form/forms/ContactUsVolvo.html
+++ b/blocks/eloqua-form/forms/ContactUsVolvo.html
@@ -1285,10 +1285,10 @@
     }
   }
 </style>
-<form method="post" name="ExceedingExpectationsSignup"
-  action="https://s1464626401.t.eloqua.com/e/f2" onsubmit="return handleFormSubmit(this)"
-  id="form59" class="elq-form">
-  <input value="ExceedingExpectationsSignup" type="hidden" name="elqFormName" />
+<form method="post" name="ContactUsVolvo" action="https://s1464626401.t.eloqua.com/e/f2"
+  onsubmit="setTimeout(function(){if(document.querySelector){var s=document.querySelector('form#form24 input[type=submit]');if(s){s.disabled=true;}}},100);return true;"
+  id="form24" class="elq-form">
+  <input value="ContactUsVolvo" type="hidden" name="elqFormName" />
   <input value="1464626401" type="hidden" name="elqSiteId" />
   <input name="elqCampaignId" type="hidden" />
   <div class="layout container-fluid">
@@ -1298,13 +1298,107 @@
           <div id="formElement0" class="elq-field-style form-element-layout row">
             <div style="text-align:left;" class="col-sm-12 col-xs-12">
               <label for="field0" class="label-position top ">
+                Please Select a Topic
+                <span class="required">
+                  *
+                </span>
+              </label>
+              <select id="field0" name="dropdownMenu3" class="field-size-top-large">
+                <option value="Corporate Info">
+                  Corporate Info
+                </option>
+                <option value="Insurance Services">
+                  Insurance Services
+                </option>
+                <option value="Media Inquiries">
+                  Media Inquiries
+                </option>
+                <option value="PREFERRED">
+                  PREFERRED
+                </option>
+                <option value="Recalls">
+                  Recalls
+                </option>
+                <option value="Roadside Assistance">
+                  Roadside Assistance
+                </option>
+                <option value="Service/Customer issues">
+                  Service/Customer issues
+                </option>
+                <option value="Trucks">
+                  Trucks
+                </option>
+                <option value="New Truck Specs">
+                  New Truck Specs
+                </option>
+                <option value="Financial Services">
+                  Financial Services
+                </option>
+                <option value="Engines">
+                  Engines
+                </option>
+                <option value="Website Comments">
+                  Website Comments
+                </option>
+                <option value="SELECT">
+                  SELECT
+                </option>
+                <option value="ASIST">
+                  ASIST
+                </option>
+              </select>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="grid-layout-col">
+        <div class="layout-col col-sm-12 col-xs-12">
+          <div id="formElement0" class="elq-field-style form-element-layout row">
+            <div style="text-align:left;" class="col-sm-12 col-xs-12">
+              <label for="field1" class="label-position top ">
+                Message
+                <span class="required">
+                  *
+                </span>
+              </label>
+              <textarea id="field1" name="paragraphText" class="field-size-top-large">
+            </textarea>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="grid-layout-col">
+        <div class="layout-col col-sm-12 col-xs-12">
+          <div id="formElement0" class="elq-field-style form-element-layout row">
+            <div style="text-align:left;" class="col-sm-12 col-xs-12">
+              <label for="field2" class="label-position top ">
+                Name
+                <span class="required">
+                  *
+                </span>
+              </label>
+              <input id="field2" name="Name" type="text" value="" class="field-size-top-large" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="grid-layout-col">
+        <div class="layout-col col-sm-12 col-xs-12">
+          <div id="formElement0" class="elq-field-style form-element-layout row">
+            <div style="text-align:left;" class="col-sm-12 col-xs-12">
+              <label for="field3" class="label-position top ">
                 Email Address
                 <span class="required">
                   *
                 </span>
               </label>
-              <input id="field0" name="emailAddress" type="text"
-                value="<eloqua type='emailfield' syntax='EmailAddress' />"
+              <input id="field3" name="emailAddress" type="text" value=""
                 class="field-size-top-large" />
             </div>
           </div>
@@ -1314,9 +1408,13 @@
     <div class="row">
       <div class="grid-layout-col">
         <div class="layout-col col-sm-12 col-xs-12">
-          <div id="formElement1" class="elq-field-style form-element-layout row">
+          <div id="formElement0" class="elq-field-style form-element-layout row">
             <div style="text-align:left;" class="col-sm-12 col-xs-12">
-              <input id="field1" type="hidden" name="hiddenField" value="" />
+              <label for="field4" class="label-position top ">
+                Address 1
+              </label>
+              <input id="field4" name="address1" type="text" value=""
+                class="field-size-top-large" />
             </div>
           </div>
         </div>
@@ -1325,9 +1423,114 @@
     <div class="row">
       <div class="grid-layout-col">
         <div class="layout-col col-sm-12 col-xs-12">
-          <div id="formElement1" class="elq-field-style form-element-layout row">
+          <div id="formElement0" class="elq-field-style form-element-layout row">
             <div style="text-align:left;" class="col-sm-12 col-xs-12">
-              <input type="submit" value="Subscribe" class="submit-button-style"/>
+              <label for="field5" class="label-position top ">
+                City
+                <span class="required">
+                  *
+                </span>
+              </label>
+              <input id="field5" name="city" type="text" value="" class="field-size-top-large" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="grid-layout-col">
+        <div class="layout-col col-sm-12 col-xs-12">
+          <div id="formElement0" class="elq-field-style form-element-layout row">
+            <div style="text-align:left;" class="col-sm-12 col-xs-12">
+              <label for="field6" class="label-position top ">
+                VIN Number
+              </label>
+              <input id="field6" name="vINNumber1" type="text" value=""
+                class="field-size-top-large" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="grid-layout-col">
+        <div class="layout-col col-sm-12 col-xs-12">
+          <div id="formElement0" class="elq-field-style form-element-layout row">
+            <div style="text-align:left;" class="col-sm-12 col-xs-12">
+              <label for="field7" class="label-position top ">
+                Country
+                <span class="required">
+                  *
+                </span>
+              </label>
+              <select id="field7" name="country"
+                data-value="<eloqua type='emailfield' syntax='Country' />"
+                class="field-size-top-large">
+                <option value="Canada">
+                  Canada
+                </option>
+                <option value="United States">
+                  United States
+                </option>
+              </select>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="grid-layout-col">
+        <div class="layout-col col-sm-12 col-xs-12">
+          <div id="formElement0" class="elq-field-style form-element-layout row">
+            <div style="text-align:left;" class="col-sm-12 col-xs-12">
+              <label for="field8" class="label-position top ">
+                Phone Number
+              </label>
+              <input id="field8" name="Phone" type="text" value="" class="field-size-top-large" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="grid-layout-col">
+        <div class="layout-col col-sm-12 col-xs-12">
+          <div id="formElement0" class="elq-field-style form-element-layout row">
+            <div style="text-align:left;" class="col-sm-12 col-xs-12">
+              <label for="field9" class="label-position top ">
+                Last Contact Date
+              </label>
+              <input id="field9" name="lastContactDate1" type="text" value=""
+                class="field-size-top-large" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="grid-layout-col">
+        <div class="layout-col col-sm-12 col-xs-12">
+          <div id="formElement0" class="elq-field-style form-element-layout row">
+            <div style="text-align:left;" class="col-sm-12 col-xs-12">
+              <span class="checkbox-span field-size-top-large">
+                <span class="list-order oneColumn">
+                  <input name="singleCheckbox" type="checkbox" value="on" />
+                  <label class="checkbox-label">
+                    Yes, please subscribe me to email and newsletter updates.
+                  </label>
+                </span>
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="grid-layout-col">
+        <div class="layout-col col-sm-12 col-xs-12">
+          <div id="formElement0" class="elq-field-style form-element-layout row">
+            <div style="text-align:left;" class="col-sm-12 col-xs-12">
+              <input type="submit" value="Submit" class="submit-button-style" />
             </div>
           </div>
         </div>
@@ -1339,39 +1542,6 @@
   type="text/javascript">
   </script>
 <style type="text/css" media="screen">
-  .elq-form .loader {
-    vertical-align: middle;
-    display: inline-block;
-    margin-left: 10px;
-    border: 3px solid #f3f3f3;
-    border-radius: 50%;
-    border-top: 3px solid #3498db;
-    width: 20px;
-    height: 20px;
-    -webkit-animation: spin 2s linear infinite;
-    animation: spin 2s linear infinite;
-  }
-
-  @-webkit-keyframes spin {
-    0% {
-      -webkit-transform: rotate(0deg);
-    }
-
-    100% {
-      -webkit-transform: rotate(360deg);
-    }
-  }
-
-  @keyframes spin {
-    0% {
-      transform: rotate(0deg);
-    }
-
-    100% {
-      transform: rotate(360deg);
-    }
-  }
-
   .LV_validation_message {
     font-weight: bold;
     margin: 0 0 0 5px;
@@ -1404,28 +1574,80 @@
   }
 </style>
 <script type="text/javascript">
-  var dom0 = document.querySelector('#form59 #field0');
+  var dom0 = document.querySelector('#form24 #field0');
   var field0 = new LiveValidation(dom0, {
     validMessage: "", onlyOnBlur: false, wait: 300
-  }
-  );
-  field0.add(Validate.Format, {
-    pattern: /^([^@\s]+)@((?:[-a-z0-9]+\.)+[a-z]{2,})$/i, failureMessage: "A valid email address is required"
   }
   );
   field0.add(Validate.Presence, {
     failureMessage: "This field is required"
   }
   );
-  function handleFormSubmit(ele) {
-    var submitButton = ele.querySelector('input[type=submit]');
-    var spinner = document.createElement('span');
-    spinner.setAttribute('class', 'loader');
-    submitButton.setAttribute('disabled', true);
-    submitButton.style.cursor = 'wait';
-    submitButton.parentNode.appendChild(spinner);
-    return true;
+  var dom1 = document.querySelector('#form24 #field1');
+  var field1 = new LiveValidation(dom1, {
+    validMessage: "", onlyOnBlur: false, wait: 300
   }
+  );
+  field1.add(Validate.Presence, {
+    failureMessage: "This field is required"
+  }
+  );
+  var dom2 = document.querySelector('#form24 #field2');
+  var field2 = new LiveValidation(dom2, {
+    validMessage: "", onlyOnBlur: false, wait: 300
+  }
+  );
+  field2.add(Validate.Presence, {
+    failureMessage: "This field is required"
+  }
+  );
+  var dom3 = document.querySelector('#form24 #field3');
+  var field3 = new LiveValidation(dom3, {
+    validMessage: "", onlyOnBlur: false, wait: 300
+  }
+  );
+  field3.add(Validate.Presence, {
+    failureMessage: "This field is required"
+  }
+  );
+  var dom4 = document.querySelector('#form24 #field4');
+  var field4 = new LiveValidation(dom4, {
+    validMessage: "", onlyOnBlur: false, wait: 300
+  }
+  );
+  var dom5 = document.querySelector('#form24 #field5');
+  var field5 = new LiveValidation(dom5, {
+    validMessage: "", onlyOnBlur: false, wait: 300
+  }
+  );
+  field5.add(Validate.Presence, {
+    failureMessage: "This field is required"
+  }
+  );
+  var dom6 = document.querySelector('#form24 #field6');
+  var field6 = new LiveValidation(dom6, {
+    validMessage: "", onlyOnBlur: false, wait: 300
+  }
+  );
+  var dom7 = document.querySelector('#form24 #field7');
+  var field7 = new LiveValidation(dom7, {
+    validMessage: "", onlyOnBlur: false, wait: 300
+  }
+  );
+  field7.add(Validate.Presence, {
+    failureMessage: "This field is required"
+  }
+  );
+  var dom8 = document.querySelector('#form24 #field8');
+  var field8 = new LiveValidation(dom8, {
+    validMessage: "", onlyOnBlur: false, wait: 300
+  }
+  );
+  var dom9 = document.querySelector('#form24 #field9');
+  var field9 = new LiveValidation(dom9, {
+    validMessage: "", onlyOnBlur: false, wait: 300
+  }
+  );
   function resetSubmitButton(e) {
     var submitButtons = e.target.form.getElementsByClassName('submit-button');
     for (var i = 0; i < submitButtons.length; i++) {
@@ -1437,11 +1659,11 @@
       elements[i].addEventListener('change', resetSubmitButton);
     }
   }
-  var form = document.getElementById('form59');
+  var form = document.getElementById('form24');
   addChangeHandler(form.getElementsByTagName('input'));
   addChangeHandler(form.getElementsByTagName('select'));
   addChangeHandler(form.getElementsByTagName('textarea'));
-  var nodes = document.querySelectorAll('#form59 input[data-subscription]');
+  var nodes = document.querySelectorAll('#form24 input[data-subscription]');
   if (nodes) {
     for (i = 0, len = nodes.length; i < len; i++) {
       var status = nodes[i].dataset ? nodes[i].dataset.subscription : nodes[i].getAttribute('data-subscription');
@@ -1450,7 +1672,7 @@
       }
     }
   };
-  var nodes = document.querySelectorAll('#form59 select[data-value]');
+  var nodes = document.querySelectorAll('#form24 select[data-value]');
   if (nodes) {
     for (var i = 0; i < nodes.length; i++) {
       var node = nodes[i];
