--- a/blocks/eloqua-form/forms/servicesubscriptions.html
+++ b/blocks/eloqua-form/forms/servicesubscriptions.html
@@ -1226,7 +1226,7 @@
     outline: 1px solid #c00
   }
 
-  .lv_validation_message {
+  .LV_validation_message {
     font-weight: 700;
     margin: 0 0 0 5px
   }
@@ -1439,7 +1439,7 @@
   type="text/javascript">
   </script>
 <style type="text/css" media="screen">
-  .lv_validation_message {
+  .LV_validation_message {
     font-weight: bold;
     margin: 0 0 0 5px;
   }
