ExceedingExpectationsSignup.html: style input field

--- a/blocks/eloqua-form/forms/ExceedingExpectationsSignup.html
+++ b/blocks/eloqua-form/forms/ExceedingExpectationsSignup.html
@@ -123,7 +123,9 @@
   .elq-form textarea {
     font-family: inherit;
     font-size: inherit;
-    line-height: inherit
+    line-height: inherit;
+    background-color: white;
+    color: black;
   }
 
   .elq-form a {
