turbo-calculator-form.html: left align check boxes

--- a/blocks/eloqua-form/forms/turbo-calculator-form.html
+++ b/blocks/eloqua-form/forms/turbo-calculator-form.html
@@ -1,4 +1,9 @@
 <style type="text/css">
+
+  .eloqua-form .single-checkbox-row.row {
+    justify-content: left;
+  }
+
   .elq-form .elq-required{
     color:red!important;
     display:inline;
