--- a/blocks/eloqua-form/forms/VNR_Electric_CU.html
+++ b/blocks/eloqua-form/forms/VNR_Electric_CU.html
@@ -262,7 +262,8 @@
 
   .elq-form .row {
     margin-left: -15px;
-    margin-right: -15px
+    margin-right: -15px;
+    flex: 1 1 50%;
   }
 
   .elq-form .row:after,
@@ -1269,6 +1270,50 @@
     display: none
   }
 
+  .layout {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .grid-layout-col {
+    width: 100%;
+  }
+
+  #form88 > div > div:nth-child(5) {
+    flex: 0 0 50%;
+  }
+  #form88 > div > div:nth-child(6),
+  #form88 > div > div:nth-child(7),
+  #form88 > div > div:nth-child(8),
+  #form88 > div > div:nth-child(11),
+  #form88 > div > div:nth-child(12),
+  #form88 > div > div:nth-child(13) {
+    flex: unset;
+    width: 100%;
+  }
+
+.list-order input[type="checkbox"],
+.list-order label.checkbox-label {
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 10px; /* optional: add some space between the input and label */
+}
+#formElement12 > div > div > div > div > div {
+  justify-content: unset;
+}
+#form88 > div > div:nth-child(5) > div > div,
+#form88 > div > div:nth-child(6) > div > div,
+#form88 > div > div:nth-child(7) > div > div,
+#form88 > div > div:nth-child(8) > div > div,
+#form88 > div > div:nth-child(11) > div > div,
+#form88 > div > div:nth-child(12) > div > div,
+#formElement4 > div:nth-child(2),
+#formElement5 > div:nth-child(2),
+#formElement6 > div:nth-child(2),
+#formElement7 > div:nth-child(2),
+#formElement10 > div:nth-child(2),
+#formElement11 > div:nth-child(2) {
+  padding-right: 0;
+}
   @media (max-width:767px) {
     .form-field-visible-xs-block {
       display: block
@@ -1400,6 +1445,7 @@
                   <div class="field-control-wrapper"><select class="elq-item-select" id="fe832"
                       name="title" style="width:100%;"
                       data-value="~~eloqua..type--emailfield..syntax--Title1~~">
+                      <option value="" selected="true" disabled="" style="display:none;">Title*</option>
                       <option value="Owner">Owner</option>
                       <option value="President">President</option>
                       <option value="CEO">CEO</option>
@@ -1431,7 +1477,7 @@
                 <div class="col-xs-12">
                   <div class="field-control-wrapper"><select class="elq-item-select" id="fe833"
                       name="industry1" style="width:100%;" data-value="">
-                      <option value="">Please Select…</option>
+                      <option value="" selected="true" disabled="" style="display:none;">Industry*</option>
                       <option value="Aerospace &amp; Defense">Aerospace &amp; Defense</option>
                       <option value="Agriculture">Agriculture</option>
                       <option value="Automotive &amp; Transport">Automotive &amp; Transport</option>
@@ -1497,6 +1543,7 @@
                   <div class="field-control-wrapper"><select class="elq-item-select" id="fe834"
                       name="stateProv" style="width:100%;"
                       data-value="~~eloqua..type--emailfield..syntax--State_Prov~~">
+                      <option value="" selected="true" disabled="" style="display:none;">State or Province*</option>
                       <option value="AK">Alaska</option>
                       <option value="AL">Alabama</option>
                       <option value="AR">Arkansas</option>
@@ -1629,7 +1676,7 @@
                   <div class="field-control-wrapper"><select class="elq-item-select" id="fe838"
                       name="country" style="width:100%;"
                       data-value="~~eloqua..type--emailfield..syntax--Country~~">
-                      <option value="">Please Select</option>
+                      <option value="" selected="true" disabled="" style="display:none;">Country*</option>
                       <option value="US">United States</option>
                       <option value="GB">United Kingdom</option>
                       <option value="CA">Canada</option>
@@ -1899,7 +1946,8 @@
             <div class="col-sm-12 col-xs-12">
               <div class="row">
                 <div class="col-xs-12">
-                  <div class="field-control-wrapper"><textarea class="elq-item-textarea"
+                  <div class="field-control-wrapper">
+                    <textarea class="elq-item-textarea" cols="30" rows="10"
                       style="width:100%;" name="paragraphText2" id="fe843"></textarea></div>
                 </div>
               </div>
@@ -1916,7 +1964,7 @@
               <div class="row">
                 <div class="col-xs-12">
                   <div>
-                    <div class="single-checkbox-row row"><input type="checkbox"
+                    <div class="list-order single-checkbox-row row"><input type="checkbox"
                         name="singleCheckbox" id="fe839"><label
                         class="checkbox-aligned elq-item-label" for="fe839">I'd like to subscribe to
                         receive Volvo product news, updates and offers.</label></div>
