removed last contact field

--- a/blocks/eloqua-form/forms/ContactUsVolvo.html
+++ b/blocks/eloqua-form/forms/ContactUsVolvo.html
@@ -99,7 +99,7 @@
 
   .elq-form input[type=checkbox],
   .elq-form input[type=radio] {
-    margin: 0
+    margin: 0 10px 0 0;
   }
 
   .elq-form *,
@@ -1441,22 +1441,6 @@
         </div>
       </div>
     </div>
-
-    <div class="row">
-      <div class="grid-layout-col">
-        <div class="layout-col col-sm-6 col-xs-12">
-          <div  class="elq-field-style form-element-layout row">
-            <div style="text-align:left;" class="col-sm-12 col-xs-12">
-              <label for="field6" class="label-position top ">
-                VIN Number
-              </label>
-              <input id="field6" name="vINNumber1" type="text" value=""
-                class="field-size-top-large" />
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
     <div class="row">
       <div class="grid-layout-col">
         <div class="layout-col col-sm-12 col-xs-12">
@@ -1498,11 +1482,11 @@
         <div class="layout-col col-sm-6 col-xs-12">
           <div  class="elq-field-style form-element-layout row">
             <div style="text-align:left;" class="col-sm-12 col-xs-12">
-              <label for="field9" class="label-position top ">
-                Last Contact Date
+              <label for="field6" class="label-position top ">
+                VIN Number
               </label>
-              <input id="field9" name="lastContactDate1" type="text" value=""
-                     class="field-size-top-large" />
+              <input id="field6" name="vINNumber1" type="text" value=""
+                class="field-size-top-large" />
             </div>
           </div>
         </div>
