--- a/404.html
+++ b/404.html
@@ -32,8 +32,6 @@
   <link rel="stylesheet" href="/styles/styles.css">
   <style>
     main.error {
-      min-height: calc(100vh - var(--nav-height));
-      display: flex;
       align-items: center;
     }
 
@@ -51,14 +49,25 @@
 <body>
   <header></header>
   <main class="error">
-    <div class="section">
-      <svg viewBox="1 0 38 18" class="error-number">
-        <text x="0" y="17">404</text>
-      </svg>
-      <h2 class="error-message">Page Not Found</h2>
-      <p class="button-container">
-        <a href="/" class="button secondary error-button-home">Go home</a>
-      </p>
+    <div class="container main-content">
+      <h1 id="social-feed">Sorry, we've looked high and low and can't find the page you're looking
+        for.</h1>
+      <h2>You might try searching for it or try some of our most commonly visited pages.</h2>
+      <h3>Possible reasons:</h3>
+      <ul>
+        <li>The page has moved</li>
+        <li>The page no longer exists</li>
+        <li>The web address was not entered correctly</li>
+        <li>The page was accessed from an expired search result</li>
+      </ul>
+      <h3>Suggested actions</h3>
+      <ul>
+        <li>Make sure the web address has been entered correctly</li>
+        <li>Go <a title="Go back" onclick="history.go(-1)">back</a> to the previous page</li>
+        <li>Visit the <a title="Home page" href="/">Volvo Trucks
+            Homepage</a></li>
+        <li>Search the VolvoTrucks.com site (search box above)</li>
+      </ul>
     </div>
   </main>
   <footer></footer>
