update domain, sitemap, and engine spec block

--- a/test/blocks/footer/footer.plain.html
+++ b/test/blocks/footer/footer.plain.html
@@ -4,7 +4,7 @@
       <div>
         <h3 id="about-volvo"><strong>About Volvo</strong></h3>
         <ul>
-          <li><a href="/about-volvo/our-story/">About</a></li>
+          <li><a href="/en-ca/about-volvo/our-story/">About</a></li>
         </ul>
       </div>
       <div>
@@ -20,14 +20,14 @@
       <div>
         <h3 id="resources"><strong>Resources</strong></h3>
         <ul>
-          <li><a href="/parts-and-services/services/resources/">Emissions Service Information</a></li>
-          <li><a href="/parts-and-services/parts/material-safety-data-sheets/">SDS Information</a></li>
+          <li><a href="/en-ca/parts-and-services/services/resources/">Emissions Service Information</a></li>
+          <li><a href="/en-ca/parts-and-services/parts/material-safety-data-sheets/">SDS Information</a></li>
         </ul>
       </div>
       <div>
         <h3 id="facilities"><strong>Facilities</strong></h3>
         <ul>
-          <li><a href="/about-volvo/facilities/">Our Locations</a></li>
+          <li><a href="/en-ca/about-volvo/facilities/">Our Locations</a></li>
         </ul>
       </div>
     </div>
@@ -36,9 +36,9 @@
 <div>
   <ul>
     <li><a href="https://www.volvogroup.com/">www.volvogroup.com</a></li>
-    <li><a href="https://www.volvotrucks.us/public-privacy-policy/">Privacy Policy</a></li>
-    <li><a href="https://www.volvotrucks.us/cookies/">Cookies</a></li>
-    <li><a href="https://www.volvotrucks.us/about-volvo/contact-us/">Contact Us</a></li>
+    <li><a href="https://www.volvotrucks.ca/en-ca/public-privacy-policy/">Privacy Policy</a></li>
+    <li><a href="https://www.volvotrucks.ca/en-ca/cookies/">Cookies</a></li>
+    <li><a href="https://www.volvotrucks.ca/en-ca/about-volvo/contact-us/">Contact Us</a></li>
     <li><a href="https://www.volvobrandshop.com/">Volvo Shop</a></li>
     <li><a href="https://www.volvogroup.com/en/tools/privacy/data-subject-rights.html">Do Not Sell or Share My Personal Information</a></li>
   </ul>
