--- a/blocks/eloqua-form/forms/event-from.html
+++ b/blocks/eloqua-form/forms/event-from.html
@@ -1690,14 +1690,14 @@
     }
   }
 
-  // hidding fields below the event data when the user type is 'customer'
+  // hidding fields below the event data when the user type is not 'customer'
   const userRadios = document.querySelectorAll('#fe1028 input[type="radio"]');
   const onCustomerTypeChange = (value) => {
     const inputsWrappers = document.querySelectorAll('#formElement14, #formElement15, #formElement16, #formElement17, #formElement18, #fe1038, #formElement20, #formElement21, #formElement22, #formElement23');
     // list of the inputs that are required only when are visible
     const requiredInputs = document.querySelectorAll('#fe1034, #fe1035, #radio-Delta_2kjmqlr, #radio-American_h4sros2c, #radio-United_fpz2sj1c, #radio-Aisle_16w0fk6, #radio-Middle_0nco7jjh, #radio-Window_78ggd9q, #fe1043, #fe1038, #fe1026, #radio-Male_1mvxuz8, #radio-Female_kj0txjdf');
 
-    if (value) {
+    if (!value) {
       inputsWrappers.forEach((el) => el.classList.add('hidden'));
       requiredInputs.forEach((el) => el.removeAttribute('required'));
     } else {
