--- a/blocks/eloqua-form/forms/event-from.html
+++ b/blocks/eloqua-form/forms/event-from.html
@@ -1099,6 +1099,7 @@
         </div>
       </div>
     </div>
+    <hr style="margin: 40px 10px; border-top: 1px solid #b9b9b9;" id="divider-1" />
     <div class="row">
       <div class="grid-layout-col">
         <div class="layout-col col-sm-6 col-xs-12">
@@ -1693,7 +1694,7 @@
   // hidding fields below the event data when the user type is not 'customer'
   const userRadios = document.querySelectorAll('#fe1028 input[type="radio"]');
   const onCustomerTypeChange = (value) => {
-    const inputsWrappers = document.querySelectorAll('#formElement14, #formElement15, #formElement16, #formElement17, #formElement18, #fe1038, #formElement20, #formElement21, #formElement22, #formElement23');
+    const inputsWrappers = document.querySelectorAll('#formElement14, #formElement15, #formElement16, #formElement17, #formElement18, #fe1038, #formElement20, #formElement21, #formElement22, #formElement23', '#divider-1');
     // list of the inputs that are required only when are visible
     const requiredInputs = document.querySelectorAll('#fe1034, #fe1035, #radio-Delta_2kjmqlr, #radio-American_h4sros2c, #radio-United_fpz2sj1c, #radio-Aisle_16w0fk6, #radio-Middle_0nco7jjh, #radio-Window_78ggd9q, #fe1043, #fe1038, #fe1026, #radio-Male_1mvxuz8, #radio-Female_kj0txjdf');
 
